sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value getValeurs
    if (getValeurs(i)>getValeurs(i+1)) {
        ^AlgBubbleSort1:5: error: not found: value getValeurs
    if (getValeurs(i)>getValeurs(i+1)) {
                      ^