sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n = getNombreValeurs()
  for (i<-0 to n-1) {
    if (getValeurs(i)>getValeurs(i+1)) {
      echange(i,i+1)
      
    }
  }
}
	